Cambios al index.html

--- a/index.html
+++ b/index.html
@@ -1,136 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Portafolio</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <nav>
-      <h1 class="logo">Ezstaring</h1>
-      <ul class="nav-links">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h2 class="hero-title">Hola, soy Ezstaring</h2>
-    <p class="hero-description">Ingeniero de Software, diseñador y futuro líder de seguridad.</p>
-    <a href="contacto.html" class="btn hero-btn">Contáctame</a>
-  </section>
-
-  <section class="about-me">
-    <h2>Acerca de Mí</h2>
-    <div class="about-me-content">
-      <p>
-        Mi nombre es Juan David González Barrera, también conocido como Ezstaring, y soy estudiante de Ingeniería de Software enfocado en el desarrollo de aplicaciones web integradas con Inteligencia Artificial. Actualmente estudio en la Universidad Manuela Beltrán, donde desarrollo habilidades en Back-End, Inteligencia Artificial y Ciberseguridad.
-      </p>
-      <p>
-        Me especializo en proyectos que combinan Python (Django, TensorFlow, PyTorch) y Java (Spring Boot), con un enfoque particular en la creación de soluciones escalables para empresas en sectores industriales y financieros. Me apasiona construir sistemas de automatización y plataformas de gestión que generen un impacto real.
-      </p>
-      <p>
-        Además, busco oportunidades en entornos internacionales donde pueda fortalecer mi inglés, seguir perfeccionando japonés, y crecer profesional y personalmente.
-      </p>
-      <p>
-        🚀 Mi objetivo a largo plazo es liderar la integración de IA, Ciberseguridad y Computación Cuántica en una tecnología revolucionaria. Para lograrlo, estoy comprometido con la mejora continua, la innovación y la colaboración estratégica.
-      </p>
-    </div>
-  </section>
-
-  <section class="skills">
-    <h2>Mis Habilidades Técnicas</h2>
-    <div class="skills-container">
-      <div class="skill-item">
-        <img src="assets/java.svg" alt="Java">
-        <h3>Java</h3>
-        <p>Desarrollo de aplicaciones robustas y escalables.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/python.svg" alt="Python">
-        <h3>Python</h3>
-        <p>Automatización, análisis de datos y desarrollo web.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/spring-boot.svg" alt="Spring Boot">
-        <h3>Spring Boot</h3>
-        <p>Creación de APIs y microservicios eficientes.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/django.svg" alt="Django">
-        <h3>Django</h3>
-        <p>Desarrollo rápido de aplicaciones web.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/mysql.svg" alt="MySQL">
-        <h3>MySQL</h3>
-        <p>Gestión de bases de datos relacionales.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/postgresql.svg" alt="PostgreSQL">
-        <h3>PostgreSQL</h3>
-        <p>Base de datos avanzada para aplicaciones complejas.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/tensorflow.svg" alt="TensorFlow">
-        <h3>TensorFlow</h3>
-        <p>Creación de modelos de aprendizaje profundo.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/pytorch.svg" alt="PyTorch">
-        <h3>PyTorch</h3>
-        <p>Desarrollo de soluciones avanzadas de Machine Learning.</p>
-      </div>
-      <div class="skill-item">
-        <img src="assets/azure.svg" alt="Azure Machine Learning">
-        <h3>Azure Machine Learning</h3>
-        <p>Implementación de modelos en la nube.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="projects">
-    <h2>Proyectos</h2>
-    <div class="projects-container">
-      <div class="project-card">
-        <h3>Gestor de Tareas</h3>
-        <p>Aplicación web para gestionar tareas diarias con integración de IA.</p>
-      </div>
-      <div class="project-card">
-        <h3>Plataforma de E-Learning</h3>
-        <p>Desarrollo de una plataforma educativa con análisis de datos en tiempo real.</p>
-      </div>
-      <div class="project-card">
-        <h3>Sistema de Seguridad</h3>
-        <p>Implementación de un sistema de ciberseguridad para pequeñas empresas.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="social-media">
-    <h2>Mis Redes Sociales</h2>
-    <div class="social-icons">
-      <a href="https://github.com/Ezstaring" target="_blank" title="GitHub">
-        <img src="assets/github.svg" alt="GitHub">
-      </a>
-      <a href="https://www.linkedin.com/in/ezstaring/" target="_blank" title="LinkedIn">
-        <img src="assets/linkedin.svg" alt="LinkedIn">
-      </a>
-      <a href="https://x.com/ezstaring" target="_blank" title="Twitter">
-        <img src="assets/x.svg" alt="Twitter">
-      </a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Ezstaring. Todos los derechos reservados.</p>
-  </footer>
-
-  <script src="js/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mi Portafolio</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+  </body>
 </html>
